stricter malaise trap validations

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -83,10 +83,18 @@
     "    if v == 'v3':\n",
     "        validate_values('CATCH_SOLUTION', df[~is_blank], valid_dict)\n",
     "        df = strip_asterisks('CATCH_SOLUTION', df)\n",
-    "    validate_values('BOTTLE_DIRECTION', \n",
-    "                    df[~is_blank & (df['COLLECTION_METHOD'] == 'MALAISE_TRAP')], # allow for blank in non-Malaise trap samples\n",
-    "                    valid_dict)\n",
-    "    validate_regex('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
+    "    is_malaise = (~is_blank & (df['COLLECTION_METHOD'] == 'MALAISE_TRAP'))\n",
+    "    is_other = (~is_blank & (df['COLLECTION_METHOD'] != 'MALAISE_TRAP'))\n",
+    "    validate_values('BOTTLE_DIRECTION', df[is_malaise], valid_dict, \n",
+    "                    extra_msg=' for malaise trap samples')\n",
+    "    # allow only empty for non-malaise trap - weird capture of bottle direction filled and collection method empty\n",
+    "    validate_values('BOTTLE_DIRECTION', df[is_other], {'BOTTLE_DIRECTION':['']}, \n",
+    "                    extra_msg=' for non-malaise trap samples')\n",
+    "    # no missing datex expected for malaise\n",
+    "    validate_regex('DATE_OF_COLLECTION', df[is_malaise], \n",
+    "                   extra_msg=' for malaise trap samples')\n",
+    "    validate_regex('DATE_OF_COLLECTION', df[is_other], na_values=['NOT_COLLECTED'],\n",
+    "                   extra_msg=' for non-malaise trap samples')\n",
     "    check_catch_lot_dates(df[~is_blank])\n",
     "    validate_regex('DECIMAL_LATITUDE', df[~is_blank], na_values=[])\n",
     "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank], na_values=[])\n",
@@ -96,11 +104,23 @@
     "    \n",
     "    # purple cols - valiated for non-blank samples\n",
     "    validate_regex('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
-    "    validate_regex('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    validate_regex('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    # no missing times expected for malaise\n",
+    "    validate_regex('TIME_OF_COLLECTION', df[is_malaise],\n",
+    "                   extra_msg=' for malaise trap samples') \n",
+    "    validate_regex('TIME_OF_COLLECTION', df[is_other], na_values=['NOT_COLLECTED',''],\n",
+    "                   extra_msg=' for non-malaise trap samples') \n",
+    "    # no missing durations for malaise\n",
+    "    validate_regex('DURATION_OF_COLLECTION', df[is_malaise],\n",
+    "                   extra_msg=' for malaise trap samples')\n",
+    "    validate_regex('DURATION_OF_COLLECTION', df[is_other], na_values=['NOT_COLLECTED',''],\n",
+    "                   extra_msg=' for non-malaise trap samples')\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict, na_values=[''])\n",
     "    df = strip_asterisks('COLLECTION_METHOD', df)\n",
-    "    validate_regex('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    # no missing plating dates for malaise\n",
+    "    validate_regex('DATE_OF_PLATING', df[is_malaise],\n",
+    "                   extra_msg=' for malaise trap samples')\n",
+    "    validate_regex('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''],\n",
+    "                   extra_msg=' for non-malaise trap samples')\n",
     "    compare_dates_text('DATE_OF_COLLECTION', 'DATE_OF_PLATING', df[~is_blank])\n",
     "    # taxonomy validation adds taxid columns to original dataframe - skipping for now\n",
     "    df = validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
@@ -186,7 +206,7 @@
    },
    "outputs": [],
    "source": [
-    "fn = '../results/20240626_misc_meta_test/SPGW_2406_BIOSCAN_Manifest_V3.xlsx'\n",
+    "fn = '../results/20241108_dev_033/NEWI_2408_BIOSCAN_Manifest_V3.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
@@ -198,7 +218,7 @@
    "outputs": [],
    "source": [
     "%run validate_partner_manifest_dev.ipynb\n",
-    "fn = '../results/20240730_bold_bge_poland/BGEP_am60.xlsx'\n",
+    "fn = '../results/20241104_bgeg/BGE_2024_edit.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
     "                      verbose=False, bold_input=True)"
    ]
@@ -206,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71fc49bf",
+   "id": "d3e12c2f",
    "metadata": {},
    "outputs": [],
    "source": []
