--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -645,7 +645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_regex(col, df, na_values=[]):\n",
+    "def validate_regex(col, df, na_values=[], extra_msg=''):\n",
     "    \n",
     "    logging.debug(f'validating data format in {col} column')\n",
     "    \n",
@@ -687,7 +687,7 @@
     "    if not is_valid_regex.all():\n",
     "        offending_values = list(series[~is_valid_regex].unique())\n",
     "        s = index_ranges(series[~is_valid_regex])\n",
-    "        msg = (f'{col} format incorrect for SERIES {s}: found {offending_values} - '\n",
+    "        msg = (f'{col} format{extra_msg} incorrect for SERIES {s}: found {offending_values} - '\n",
     "              f'expected to be {regexs[col][1]}')\n",
     "        if col == 'CATCH_LOT':\n",
     "            logging.warning(msg)\n",
@@ -699,7 +699,7 @@
     "        if not is_recommended_regex.all():\n",
     "            offending_values = list(series[~is_recommended_regex & is_valid_regex].unique())\n",
     "            s = index_ranges(series[~is_recommended_regex & is_valid_regex])\n",
-    "            msg = (f'{col} format suggestion for SERIES {s}: found {offending_values} - '\n",
+    "            msg = (f'{col} format suggestion{extra_msg} for SERIES {s}: found {offending_values} - '\n",
     "                  f'we ask to use PT[n]H format (hours only)')\n",
     "            logging.warning(msg)\n",
     "        "
@@ -900,6 +900,12 @@
     "                f'found {set(non_blank_penultimate_well_df.ORGANISM_PART.to_list())}, '\n",
     "                f'these samples will not be sequenced',\n",
     "            )\n",
+    "            \n",
+    "        blank_non_term_df = blank_df[~blank_df.TUBE_OR_WELL_ID.isin(['G12','H12'])]\n",
+    "        if blank_non_term_df.shape[0] > 0:\n",
+    "            logging.warning(\n",
+    "                f'blanks in non-G12/H12 wells at SERIES {index_ranges(blank_non_term_df)}',\n",
+    "            )\n",
     "\n",
     "    any_excessive_blank_info = False\n",
     "        \n",
@@ -935,7 +941,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_values(col, df, valid_dict, sep=None, na_values=[], level='e'):\n",
+    "def validate_values(col, df, valid_dict, sep=None, na_values=[], level='e', extra_msg=''):\n",
     "    \n",
     "    logging.debug(f'validating for allowed values in {col} column')\n",
     "    \n",
@@ -972,7 +978,7 @@
     "                invalid_value_series = index_ranges(series[invalid_mask])\n",
     "            else:\n",
     "                invalid_value_series = index_ranges(series[series == invalid_value])\n",
-    "            msg = f'invalid value in {col} column, SERIES {invalid_value_series}: \"{invalid_value}\"'\n",
+    "            msg = f'invalid value{extra_msg} in {col} column, SERIES {invalid_value_series}: \"{invalid_value}\"'\n",
     "            if level == 'i':\n",
     "                logging.info(msg)\n",
     "            elif level == 'w':\n",
