replace newlines with spaces, unify all char replacements in remove trailing spaces

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -43,7 +43,6 @@
     "    # check series, exclude non-numeric\n",
     "    df = validate_series(df)\n",
     "    # clean up data\n",
-    "    df = remove_nonbreaking_spaces(df)\n",
     "    df = remove_trailing_spaces(df, title='sample')\n",
     "    \n",
     "    # read NCBI taxonomy\n",
@@ -206,7 +205,7 @@
    },
    "outputs": [],
    "source": [
-    "fn = '../results/20241108_dev_033/NEWI_2408_BIOSCAN_Manifest_V3.xlsx'\n",
+    "fn = '../results/20241120_bgku_2024_v3/BGKU_2024_BIOSCAN_Manifest_V2.0_patched(1).xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
@@ -218,7 +217,7 @@
    "outputs": [],
    "source": [
     "%run validate_partner_manifest_dev.ipynb\n",
-    "fn = '../results/20241104_bgeg/BGE_2024_edit.xlsx'\n",
+    "fn = '../results/20241104_bgeg/TOL-BGEG-082-083_single_specimen_metadata&biobanking.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
     "                      verbose=False, bold_input=True)"
    ]
@@ -226,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e12c2f",
+   "id": "9ca745cb",
    "metadata": {},
    "outputs": [],
    "source": []
