--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATION_VERSION = '0.3.3'\n",
+    "VALIDATION_VERSION = '0.3.3dev'\n",
     "ANOSPP_VERSION = '4.0'\n",
     "# V2.0, but V3 in SOP\n",
     "BIOSCAN_VERSION = '3'"
@@ -276,6 +276,7 @@
     "        'ORGANISM':'WHOLE_ORGANISM',\n",
     "        'WHOLE SPECIMEN':'WHOLE_ORGANISM',\n",
     "        'WHOLE_SPECIMEN':'WHOLE_ORGANISM',\n",
+    "        'BODY PART':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'SOMATIC PART':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'TAIL':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'ANTENA':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
@@ -288,12 +289,14 @@
     "        'Ethanol':'V%_ETHANOL',\n",
     "        'ethanol':'V%_ETHANOL',\n",
     "        'dry':'NONE',\n",
+    "        'Dry':'NONE',\n",
     "        '':'NONE' # problem with blanks?\n",
     "    }, inplace=True)\n",
     "    df['CATCH_SOLUTION'].replace({\n",
     "        'Ethanol':'V%_ETHANOL',\n",
     "        'ethanol':'V%_ETHANOL',\n",
     "        'dry':'NONE',\n",
+    "        'Dry':'NONE',\n",
     "        '':'NONE' # problem with blanks?\n",
     "    }, inplace=True)\n",
     "    df['DECIMAL_LATITUDE'] = df['DECIMAL_LATITUDE'].replace('', np.nan).astype(float).round(6).astype(str)\n",
@@ -312,7 +315,7 @@
     "    df['CATCH_LOT'] = 'NOT_APPLICABLE'\n",
     "    df.loc[~is_blank, 'CATCH_SOLUTION'] = df['PRESERVATIVE_SOLUTION']\n",
     "    df.loc[is_blank, 'CATCH_SOLUTION'] = ''\n",
-    "    df.loc[~is_blank, 'BOTTLE_DIRECTION'] = 'NOT_APPLICABLE'\n",
+    "    df.loc[~is_blank, 'BOTTLE_DIRECTION'] = ''\n",
     "    df.loc[~is_blank, 'AMOUNT_OF_CATCH_PLATED'] = 'NOT_APPLICABLE'\n",
     "    \n",
     "    # encoding\n",
@@ -474,39 +477,38 @@
    "source": [
     "def remove_trailing_spaces(df, title):\n",
     "    \n",
-    "    any_trailing_spaces = False\n",
+    "    trailing_spaces_cols = []\n",
     "    \n",
     "    for col in df.columns:\n",
+    "        \n",
+    "        nonbreaking_spaces = df[col].str.contains(u\"\\u00A0\")\n",
+    "        if nonbreaking_spaces.any():\n",
+    "            logging.info(f'non-breaking spaces found in {col} column, '\n",
+    "                         f'SERIES {index_ranges(df.loc[nonbreaking_spaces])} - '\n",
+    "                         'replacing with spaces for validation and output')\n",
+    "            df[col] = df[col].str.replace(u\"\\u00A0\", \" \")\n",
+    "        \n",
+    "        newlines = df[col].str.contains(\"\\n\")\n",
+    "        if newlines.any():\n",
+    "            logging.info(f'line breaks found in {col} column, '\n",
+    "                         f'SERIES {index_ranges(df.loc[newlines])} - '\n",
+    "                         'replacing with spaces for validation and output')\n",
+    "            df[col] = df[col].str.replace(\"\\n\", \" \")\n",
+    "        \n",
     "        trailing_spaces = (df[col].str.startswith(' ') | df[col].str.endswith(' '))\n",
     "        if trailing_spaces.any():\n",
     "            logging.debug(f'trailing spaces found in {col} column, '\n",
     "                         f'SERIES {index_ranges(df.loc[trailing_spaces])} - removing for validation and output')\n",
     "            df[col] = df[col].str.strip()\n",
-    "            any_trailing_spaces = True\n",
+    "            trailing_spaces_cols.append(col)\n",
     "            \n",
-    "    if any_trailing_spaces:\n",
-    "        logging.info(f'removed some trailing spaces from the {title} manifest')\n",
+    "    if len(trailing_spaces_cols) > 0:\n",
+    "        logging.info(f'removed some trailing spaces from the {title} manifest in '\n",
+    "                     f'columns {\", \".join(trailing_spaces_cols)}')\n",
     "            \n",
     "    return df\n",
     "\n",
     "# df = remove_trailing_spaces(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_nonbreaking_spaces(df):\n",
-    "    for col in df.columns:\n",
-    "        nonbreaking_spaces = df[col].str.contains(u\"\\u00A0\")\n",
-    "        if nonbreaking_spaces.any():\n",
-    "            logging.info(f'non-breaking spaces found in {col} column, '\n",
-    "                         f'SERIES {index_ranges(df.loc[nonbreaking_spaces])} - removing for validation and output')\n",
-    "            df[col] = df[col].str.replace(u\"\\u00A0\", \" \")\n",
-    "            \n",
-    "    return df"
    ]
   },
   {
