init bold update, trailing spaces logic fix

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -120,7 +120,7 @@
     "        # first BGE manifest header\n",
     "        df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
     "                           sheet_name=sheet, header=3).iloc[3:]\n",
-    "    if ('Plate ID' not in df.columns) or (df['Well Position'].iloc[0] != 'A01'):\n",
+    "    if ('Plate ID' not in df.columns): # or (df['Well Position'].iloc[0] != 'A01'):\n",
     "        raise ValueError('could not parse bold manifest')\n",
     "    \n",
     "    df.index = (i + 1 for i in range(df.shape[0]))\n",
@@ -254,7 +254,7 @@
     "    df = df.sort_values(by=['RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID'])\n",
     "    for col in ['RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID']:\n",
     "        df[col] = df[col].astype(str)\n",
-    "    # reset index again\n",
+    "    # assign series from new index\n",
     "    df.index = (i + 1 for i in range(df.shape[0]))\n",
     "    df.index.name = 'SERIES'\n",
     "    \n",
@@ -495,11 +495,12 @@
     "                         'replacing with spaces for validation and output')\n",
     "            df[col] = df[col].str.replace(\"\\n\", \" \")\n",
     "        \n",
-    "        trailing_spaces = (df[col].str.startswith(' ') | df[col].str.endswith(' '))\n",
+    "        stripped_col = df[col].str.strip()\n",
+    "        trailing_spaces = (df[col] != stripped_col)\n",
     "        if trailing_spaces.any():\n",
     "            logging.debug(f'trailing spaces found in {col} column, '\n",
     "                         f'SERIES {index_ranges(df.loc[trailing_spaces])} - removing for validation and output')\n",
-    "            df[col] = df[col].str.strip()\n",
+    "            df[col] = stripped_col\n",
     "            trailing_spaces_cols.append(col)\n",
     "            \n",
     "    if len(trailing_spaces_cols) > 0:\n",
