bold manifest with data split into tabs + extra edge case handling

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -111,20 +111,56 @@
    "source": [
     "def parse_bold(fn, template_df, sheet):\n",
     "    \n",
-    "    logging.info(f'parsing bold manifest from \"{fn}\" sheet \"{sheet}\"')\n",
     "    \n",
-    "    # second BGE manifest header\n",
-    "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
-    "                       sheet_name=sheet, header=1).iloc[1:]\n",
-    "    if 'Plate ID' not in df.columns:\n",
-    "        # first BGE manifest header\n",
+    "    \n",
+    "    xl = pd.ExcelFile(fn)\n",
+    "\n",
+    "    if sheet in xl.sheet_names: \n",
+    "        logging.info(f'parsing bold manifest from \"{fn}\" sheet \"{sheet}\"')\n",
+    "        # second BGE manifest header\n",
     "        df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
-    "                           sheet_name=sheet, header=3).iloc[3:]\n",
-    "    if ('Plate ID' not in df.columns): # or (df['Well Position'].iloc[0] != 'A01'):\n",
-    "        raise ValueError('could not parse bold manifest')\n",
+    "                           sheet_name=sheet, header=1).iloc[1:]\n",
+    "        if 'Plate ID' not in df.columns:\n",
+    "            # first BGE manifest header\n",
+    "            df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
+    "                               sheet_name=sheet, header=3).iloc[3:]\n",
+    "        if ('Plate ID' not in df.columns): # or (df['Well Position'].iloc[0] != 'A01'):\n",
+    "            raise ValueError('could not parse bold manifest')\n",
     "    \n",
-    "    df.index = (i + 1 for i in range(df.shape[0]))\n",
-    "    df.index.name = 'SERIES'\n",
+    "    else:\n",
+    "        logging.info(f'sheet {sheet} not found in bold manifest \"{fn}\", aggregating data from available fields')\n",
+    "        first_df = True\n",
+    "        for sub_sheet in xl.sheet_names:\n",
+    "            logging.debug(f'parsing sheet {sub_sheet}')\n",
+    "            if sub_sheet == 'Custom':\n",
+    "                sub_df = pd.read_excel(\n",
+    "                    fn, sheet_name=sub_sheet,\n",
+    "                    dtype=str, keep_default_na=False,\n",
+    "                    header=3)\n",
+    "                sub_df.columns = sub_df.columns.str.replace('SampleID','Sample ID')\n",
+    "            else:\n",
+    "                sub_df = pd.read_excel(\n",
+    "                    fn, sheet_name=sub_sheet,\n",
+    "                    dtype=str, keep_default_na=False,\n",
+    "                    header=2)\n",
+    "            if 'Sample ID' not in sub_df.columns:\n",
+    "                logging.warning(f'sheet {sub_sheet} does not contain \"Samlpe ID\" column, skipping')\n",
+    "                continue\n",
+    "            # first entry\n",
+    "            if first_df:\n",
+    "                df = sub_df\n",
+    "                first_df = False\n",
+    "            # subsequent\n",
+    "            else:\n",
+    "                dup_cols = set(sub_df.columns).intersection(set(df.columns) - set(['Sample ID']))\n",
+    "                if len(dup_cols) > 0:\n",
+    "                    logging.warning(f'found and ignored duplicate columns in sheet {sub_sheet}: {\", \".join(dup_cols)}')\n",
+    "                    sub_df = sub_df.drop(columns=dup_cols)\n",
+    "                nsamples = len(df)\n",
+    "                df = df.merge(sub_df, on='Sample ID', how='inner')\n",
+    "                assert len(df) == nsamples, f'not all samples found in sheet {sub_sheet}'\n",
+    "                      \n",
+    "    logging.info('post-processing BOLD manifest')\n",
     "    \n",
     "    col_mapping = {\n",
     "#         'Sample ID'\n",
@@ -166,8 +202,8 @@
     "#         'Associated Specimens'\n",
     "#         'Collectors'\n",
     "        'Collection Date':'DATE_OF_COLLECTION',\n",
-    "        'Country/ Ocean':'COUNTRY_OF_COLLECTION',\n",
-    "#         'State/ Province'\n",
+    "        'Country/Ocean':'COUNTRY_OF_COLLECTION',\n",
+    "#         'State/Province'\n",
     "#         'Region'\n",
     "#         'Sector'\n",
     "        'Exact Site':'COLLECTION_LOCATION',\n",
@@ -222,6 +258,7 @@
     "            df[col].replace({\n",
     "                'LEAVE BLANK':''\n",
     "            }, inplace=True)\n",
+    "    \n",
     "    df = df[template_df.columns]\n",
     "    \n",
     "    # strip leading zeroes from well ids\n",
@@ -229,7 +266,8 @@
     "        '([A-H])0', r'\\1', regex=True\n",
     "    )\n",
     "    \n",
-    "    # blanks handling\n",
+    "    \n",
+    "    # blanks have no data in organism part\n",
     "    for i, r in df[df['ORGANISM_PART'] == ''].iterrows():\n",
     "        df.loc[i, 'ORGANISM_PART'] = 'NOT_APPLICABLE'\n",
     "        if df.loc[i, 'TUBE_OR_WELL_ID'] == '':\n",
@@ -247,6 +285,26 @@
     "    for col in range(1,13):\n",
     "        for row in 'ABCDEFGH':\n",
     "            sts_well_ids.append(f'{row}{col}')\n",
+    "    # assume missing wells are blanks, add at the end, sort later\n",
+    "    for plate_id in df.RACK_OR_PLATE_ID.drop_duplicates():\n",
+    "        plate_df = df[df['RACK_OR_PLATE_ID'] == plate_id]\n",
+    "        missing_wells = set(sts_well_ids) - set(plate_df['TUBE_OR_WELL_ID'])\n",
+    "        if len(missing_wells) > 0:\n",
+    "            logging.warning(\n",
+    "                f'plate {plate_id} has missing wells {\", \".join(missing_wells)}, '\n",
+    "                f'filling with blank samples'\n",
+    "            )\n",
+    "            md = {}\n",
+    "            for i, well_id in enumerate(missing_wells):\n",
+    "                md[i] = {\n",
+    "                    'RACK_OR_PLATE_ID':plate_id,\n",
+    "                    'TUBE_OR_WELL_ID':well_id,\n",
+    "                    'PRESERVATIVE_SOLUTION':plate_df['PRESERVATIVE_SOLUTION'].iloc[0],\n",
+    "                    'ORGANISM_PART':'NOT_APPLICABLE'\n",
+    "                }\n",
+    "            df = pd.concat([df, pd.DataFrame(md).T], ignore_index=True).fillna('')\n",
+    "                \n",
+    "    \n",
     "    well_order_cat = pd.CategoricalDtype(sts_well_ids, ordered=True)\n",
     "    df['TUBE_OR_WELL_ID'] = df['TUBE_OR_WELL_ID'].astype(well_order_cat)\n",
     "    plate_order_cat = pd.CategoricalDtype(df.RACK_OR_PLATE_ID.drop_duplicates(), ordered=True)\n",
@@ -331,6 +389,7 @@
     "           .str.contains('sweep net'), 'COLLECTION_METHOD'] = 'AERIAL_NET'\n",
     "    df.loc[~is_blank & (df.COLLECTION_METHOD == ''), 'COLLECTION_METHOD'] = '**OTHER**'\n",
     "    \n",
+    "    logging.info('post-processing BOLD manifest complete')\n",
     "    \n",
     "    return df\n",
     "# template_df = get_data(biosc_fn, sheet='TAB 2 Metadata Entry')\n",
