disallow missing collection date in anospp

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -69,7 +69,7 @@
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    # columns below validated for non-blank samples only\n",
-    "    validate_regex('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_regex('DATE_OF_COLLECTION', df[~is_blank]) #, na_values=['NOT_COLLECTED',''])\n",
     "    validate_regex('DECIMAL_LATITUDE', df[~is_blank])\n",
     "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank])\n",
     "    # COLLECTION_COUNTRY, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
