new bold issues recording

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -212,12 +212,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0304ddd6",
+   "id": "a8391b88",
    "metadata": {},
    "outputs": [],
    "source": [
     "%run validate_partner_manifest_dev.ipynb\n",
-    "fn = '../results/20241104_bgeg/TOL-BGEG-082-083_single_specimen_metadata&biobanking.xlsx'\n",
+    "fn = '../results/20250509_bgeg/TOL-BGEG-2ndbatch-1stfile.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
     "                      verbose=False, bold_input=True)"
    ]
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca745cb",
+   "id": "b3769866",
    "metadata": {},
    "outputs": [],
    "source": []
