--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -124,8 +124,6 @@
     "            # first BGE manifest header\n",
     "            df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
     "                               sheet_name=sheet, header=3).iloc[3:]\n",
-    "        if ('Plate ID' not in df.columns): # or (df['Well Position'].iloc[0] != 'A01'):\n",
-    "            raise ValueError('could not parse bold manifest')\n",
     "    \n",
     "    else:\n",
     "        logging.info(f'sheet {sheet} not found in bold manifest \"{fn}\", aggregating data from available fields')\n",
@@ -162,6 +160,17 @@
     "                      \n",
     "    logging.info('post-processing BOLD manifest')\n",
     "    \n",
+    "    logging.debug('concatenating site info')\n",
+    "    def agg_loc(row):\n",
+    "        loc_info = []\n",
+    "        for col in ['State/ Province', 'Region', 'Sector', 'Exact Site']:\n",
+    "            if len(row[col]) > 0:\n",
+    "                loc_info.append(row[col])\n",
+    "        return ', '.join(loc_info)\n",
+    "    \n",
+    "    df['Exact Site'] = df.apply(agg_loc, axis=1)\n",
+    "    \n",
+    "    logging.debug('remapping columns')\n",
     "    col_mapping = {\n",
     "#         'Sample ID'\n",
     "        'Plate ID':'RACK_OR_PLATE_ID',\n",
@@ -203,7 +212,9 @@
     "#         'Collectors'\n",
     "        'Collection Date':'DATE_OF_COLLECTION',\n",
     "        'Country/Ocean':'COUNTRY_OF_COLLECTION',\n",
+    "        'Country/ Ocean':'COUNTRY_OF_COLLECTION',\n",
     "#         'State/Province'\n",
+    "#         'State/ Province'\n",
     "#         'Region'\n",
     "#         'Sector'\n",
     "        'Exact Site':'COLLECTION_LOCATION',\n",
@@ -250,7 +261,7 @@
     "    \n",
     "    df.rename(columns=col_mapping, inplace=True)\n",
     "    \n",
-    "    # reorder columns, add missing, remove \"LEAVE BLANK\" values\n",
+    "    logging.debug('reordering columns, adding missing, removing \"LEAVE BLANK\" values')\n",
     "    for col in template_df.columns:\n",
     "        if col not in df.columns:\n",
     "            df[col] = ''\n",
@@ -261,13 +272,13 @@
     "    \n",
     "    df = df[template_df.columns]\n",
     "    \n",
-    "    # strip leading zeroes from well ids\n",
+    "    \n",
+    "    logging.debug('stripping leading zeroes from well ids')\n",
     "    df['TUBE_OR_WELL_ID'] = df['TUBE_OR_WELL_ID'].str.replace(\n",
     "        '([A-H])0', r'\\1', regex=True\n",
     "    )\n",
     "    \n",
-    "    \n",
-    "    # blanks have no data in organism part\n",
+    "    logging.debug('fixing organism part for blanks - assume no data')\n",
     "    for i, r in df[df['ORGANISM_PART'] == ''].iterrows():\n",
     "        df.loc[i, 'ORGANISM_PART'] = 'NOT_APPLICABLE'\n",
     "        if df.loc[i, 'TUBE_OR_WELL_ID'] == '':\n",
@@ -285,6 +296,7 @@
     "    for col in range(1,13):\n",
     "        for row in 'ABCDEFGH':\n",
     "            sts_well_ids.append(f'{row}{col}')\n",
+    "    logging.debug('adding missing wells - assume blank samples')\n",
     "    # assume missing wells are blanks, add at the end, sort later\n",
     "    for plate_id in df.RACK_OR_PLATE_ID.drop_duplicates():\n",
     "        plate_df = df[df['RACK_OR_PLATE_ID'] == plate_id]\n",
@@ -304,7 +316,7 @@
     "                }\n",
     "            df = pd.concat([df, pd.DataFrame(md).T], ignore_index=True).fillna('')\n",
     "                \n",
-    "    \n",
+    "    logging.debug('sorting by plate and well')\n",
     "    well_order_cat = pd.CategoricalDtype(sts_well_ids, ordered=True)\n",
     "    df['TUBE_OR_WELL_ID'] = df['TUBE_OR_WELL_ID'].astype(well_order_cat)\n",
     "    plate_order_cat = pd.CategoricalDtype(df.RACK_OR_PLATE_ID.drop_duplicates(), ordered=True)\n",
@@ -316,7 +328,7 @@
     "    df.index = (i + 1 for i in range(df.shape[0]))\n",
     "    df.index.name = 'SERIES'\n",
     "    \n",
-    "    # other contents adjustments\n",
+    "    logging.debug('adjusting specific content')\n",
     "    df['SEX'] = df['SEX'].str.upper()\n",
     "    df['LIFESTAGE'] = df['LIFESTAGE'].str.upper()\n",
     "    df['ORGANISM_PART'] = df['ORGANISM_PART'].str.upper() \\\n",
@@ -367,9 +379,8 @@
     "    df.loc[species_identified, 'PREDICTED_SCIENTIFIC_NAME'] = df.loc[species_identified, 'PREDICTED_GENUS'].str.title() + \\\n",
     "            ' ' + df.loc[species_identified, 'PREDICTED_SCIENTIFIC_NAME'].str.lower()\n",
     "        \n",
+    "    logging.debug('auto-filling content not in BOLD manifest')\n",
     "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
-    "        \n",
-    "    # auto-fill\n",
     "    df['CATCH_LOT'] = 'NOT_APPLICABLE'\n",
     "    df.loc[~is_blank, 'CATCH_SOLUTION'] = df['PRESERVATIVE_SOLUTION']\n",
     "    df.loc[is_blank, 'CATCH_SOLUTION'] = ''\n",
@@ -378,7 +389,7 @@
     "    \n",
     "    # encoding\n",
     "    \n",
-    "    # encoding for collection method\n",
+    "    logging.debug('encoding collection methods')\n",
     "    df.loc[df['DESCRIPTION_OF_COLLECTION_METHOD'].str.lower() \\\n",
     "           .str.contains('pan trap'), 'COLLECTION_METHOD'] = 'PAN_TRAP'\n",
     "    logging.info(f'inferred {df[df.COLLECTION_METHOD == \"PAN_TRAP\"].shape[0]} samples collected with PAN_TRAP')\n",
@@ -1170,6 +1181,9 @@
     "            lon = coord_list[1]\n",
     "            try:\n",
     "                lat, lon = float(lat), float(lon)\n",
+    "                # na\n",
+    "                assert lat == lat\n",
+    "                assert lon == lon\n",
     "            except:\n",
     "                unparsed_df = df[(df[lat_col] == str(lat)) & df[lon_col] == str(lon)]\n",
     "                logging.error(\n",
@@ -1186,7 +1200,9 @@
     "                    f'invalid DECIMAL_LONGITUDE {lon} at SERIES {index_ranges(df[df[lon_col] == str(lon)])}'\n",
     "                    f', should be in [-180,180]')\n",
     "                continue\n",
+    "                \n",
     "            # web query\n",
+    "            logging.debug(f'querying with \"{c}\"')\n",
     "            location = rgeocode(c, language='en-gb')\n",
     "            # rgeocode returns empty location outside of counries and in some other situations\n",
     "            if location is not None:\n",
