--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATION_VERSION = '0.3.3dev'\n",
+    "VALIDATION_VERSION = '0.3.5'\n",
     "ANOSPP_VERSION = '4.0'\n",
     "# V2.0, but V3 in SOP\n",
     "BIOSCAN_VERSION = '3'"
@@ -1665,7 +1665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
