more bold edge cases

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -160,10 +160,15 @@
     "                      \n",
     "    logging.info('post-processing BOLD manifest')\n",
     "    \n",
+    "    df = df.rename(columns={\n",
+    "        'State/ Province':'State/Province',\n",
+    "        'Country/ Ocean':'Country/Ocean'\n",
+    "    })\n",
+    "    \n",
     "    logging.debug('concatenating site info')\n",
     "    def agg_loc(row):\n",
     "        loc_info = []\n",
-    "        for col in ['State/ Province', 'Region', 'Sector', 'Exact Site']:\n",
+    "        for col in ['State/Province', 'Region', 'Sector', 'Exact Site']:\n",
     "            if len(row[col]) > 0:\n",
     "                loc_info.append(row[col])\n",
     "        return ', '.join(loc_info)\n",
@@ -211,10 +216,9 @@
     "#         'Associated Specimens'\n",
     "#         'Collectors'\n",
     "        'Collection Date':'DATE_OF_COLLECTION',\n",
+    "        'Collection Start Date':'DATE_OF_COLLECTION',\n",
     "        'Country/Ocean':'COUNTRY_OF_COLLECTION',\n",
-    "        'Country/ Ocean':'COUNTRY_OF_COLLECTION',\n",
     "#         'State/Province'\n",
-    "#         'State/ Province'\n",
     "#         'Region'\n",
     "#         'Sector'\n",
     "        'Exact Site':'COLLECTION_LOCATION',\n",
@@ -267,7 +271,8 @@
     "            df[col] = ''\n",
     "        else:\n",
     "            df[col].replace({\n",
-    "                'LEAVE BLANK':''\n",
+    "                'LEAVE BLANK':'',\n",
+    "                'LEFT BLANK':''\n",
     "            }, inplace=True)\n",
     "    \n",
     "    df = df[template_df.columns]\n",
@@ -331,9 +336,14 @@
     "    logging.debug('adjusting specific content')\n",
     "    df['SEX'] = df['SEX'].str.upper()\n",
     "    df['LIFESTAGE'] = df['LIFESTAGE'].str.upper()\n",
+    "    df['LIFESTAGE'] = df['LIFESTAGE'].str.replace('LARVA.*','LARVA', regex=True)\n",
+    "    df['LIFESTAGE'].replace({\n",
+    "        'IMMATURE / CATERPILLAR':'LARVA',\n",
+    "    }, inplace=True)\n",
     "    df['ORGANISM_PART'] = df['ORGANISM_PART'].str.upper() \\\n",
     "        .str.replace(', ', ' | ').str.strip()\n",
     "    df['ORGANISM_PART'].replace({\n",
+    "        'LEGS':'LEG',\n",
     "        'LEGS':'LEG',\n",
     "        'WINGS':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'WING':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
@@ -1665,7 +1675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
