more edge cases for bold manifests

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -339,23 +339,41 @@
     "    df['LIFESTAGE'] = df['LIFESTAGE'].str.replace('LARVA.*','LARVA', regex=True)\n",
     "    df['LIFESTAGE'].replace({\n",
     "        'IMMATURE / CATERPILLAR':'LARVA',\n",
+    "        'NYMPH':'LARVA',\n",
+    "        'NYMPHS':'LARVA',\n",
+    "        'SUBADULT':'ADULT',\n",
+    "        'SUB-ADULT':'ADULT'\n",
     "    }, inplace=True)\n",
     "    df['ORGANISM_PART'] = df['ORGANISM_PART'].str.upper() \\\n",
-    "        .str.replace(', ', ' | ').str.strip()\n",
+    "        .str.replace(', ', ' | ') \\\n",
+    "        .str.replace(' AND ', ' | ') \\\n",
+    "        .str.replace('PARTIAL ', '') \\\n",
+    "        .str.strip()\n",
     "    df['ORGANISM_PART'].replace({\n",
     "        'LEGS':'LEG',\n",
-    "        'LEGS':'LEG',\n",
+    "        'CLAW':'LEG',\n",
+    "        'LEG (FEMUR)':'LEG',\n",
+    "        'ABDOMMEN':'ABDOMEN',\n",
     "        'WINGS':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'WING':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'ABDOMEN | LEGS':'ABDOMEN | LEG',\n",
     "        'HEAD | LEGS':'HEAD | LEG',\n",
+    "        'LEGS | THORAX':'LEG | THORAX',\n",
+    "        'HEAD THORAX':'HEAD | THORAX',\n",
+    "        'HEAD_THORAX':'HEAD | THORAX',\n",
+    "        'THORAX HEAD':'HEAD | THORAX',\n",
+    "        'ABDOMEN THORAX':'ABDOMEN | THORAX',\n",
+    "        'GASTER':'ABDOMEN',\n",
     "        'BODY':'WHOLE_ORGANISM',\n",
     "        'WHOLE':'WHOLE_ORGANISM',\n",
+    "        'TOTAL':'WHOLE_ORGANISM',\n",
     "        'WHOLE BODY':'WHOLE_ORGANISM',\n",
     "        'WHOLE ORGANISM':'WHOLE_ORGANISM',\n",
     "        'ORGANISM':'WHOLE_ORGANISM',\n",
     "        'WHOLE SPECIMEN':'WHOLE_ORGANISM',\n",
     "        'WHOLE_SPECIMEN':'WHOLE_ORGANISM',\n",
+    "        'MUSCLE':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'BODY PARTS':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'BODY PART':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'SOMATIC PART':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'TAIL':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
